@@ -1,3 +1,7 @@
+2010-01-24  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #13090: 4.4.0 trunk: version warning with CSS styled content
+
 2010-01-23  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #12688: MM relations: rollback not working / sys_history wrong (thanks to Ralf Hettinger)
